--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
       border-radius: 8px;
       width: 90%;
       max-width: 420px;
+      position: relative;
     }
 
     input, textarea {
@@ -188,7 +189,9 @@
     }
 
     .close {
-      float: right;
+      position: absolute;
+      right: 12px;
+      top: 8px;
       font-size: 1.3rem;
       cursor: pointer;
     }
@@ -199,6 +202,25 @@
       border-radius: 8px;
       object-fit: cover;
       margin-right: 5px;
+    }
+
+    .preview {
+      display: flex;
+      gap: 5px;
+      flex-wrap: wrap;
+    }
+
+    .toast {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: var(--accent-dark);
+      color: #000;
+      padding: 0.8rem 1rem;
+      border-radius: 8px;
+      font-weight: 600;
+      z-index: 200;
     }
 
     /* RESPONSIVE */
@@ -283,10 +305,16 @@
       <table id="serviceTable" style="display:none;">
         <thead><tr><th>Datum</th><th>Omschrijving</th><th>Garage</th><th>Kilometerstand</th></tr></thead>
         <tbody>
-          <tr><td>2021-05-01</td><td>APK + grote beurt</td><td>Total Car Service</td><td>165.200 km</td></tr>
+          <tr><td>2020-05-22</td><td>APK + onderhoud</td><td>Total Car Service</td><td>148.500 km</td></tr>
+          <tr><td>2021-05-01</td><td>Grote beurt + filters</td><td>Total Car Service</td><td>165.200 km</td></tr>
+          <tr><td>2021-11-13</td><td>Nieuwe accu + olieverversing</td><td>Total Car Service</td><td>173.400 km</td></tr>
           <tr><td>2022-06-20</td><td>Jaarlijkse onderhoudsbeurt</td><td>Total Car Service</td><td>188.240 km</td></tr>
+          <tr><td>2022-12-10</td><td>APK + filters</td><td>Total Car Service</td><td>192.800 km</td></tr>
           <tr><td>2023-05-12</td><td>Olie + filter vervangen</td><td>Total Car Service</td><td>198.740 km</td></tr>
+          <tr><td>2023-11-15</td><td>Grote beurt + remcontrole</td><td>Total Car Service</td><td>204.120 km</td></tr>
           <tr><td>2024-05-31</td><td>APK keuring + remmencontrole</td><td>Total Car Service</td><td>209.870 km</td></tr>
+          <tr><td>2024-10-21</td><td>Nieuwe banden + uitlijning</td><td>Total Car Service</td><td>213.540 km</td></tr>
+          <tr><td>2025-01-07</td><td>Kleine beurt + olieverversing</td><td>Total Car Service</td><td>215.800 km</td></tr>
         </tbody>
       </table>
 
@@ -301,6 +329,40 @@
       </table>
     </div>
   </div>
+
+  <!-- PLAN MODAL -->
+  <div id="planModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('planModal')">&times;</span>
+      <h3>Plan onderhoudsafspraak</h3>
+      <label>Datum:</label>
+      <input type="date" />
+      <label>Opmerkingen:</label>
+      <textarea placeholder="Bijv. olie vervangen of controle remmen..."></textarea>
+      <label>Voeg afbeelding toe:</label>
+      <input type="file" id="planFile" accept="image/*" multiple onchange="previewFiles(event, 'planPreview')" />
+      <div class="preview" id="planPreview"></div>
+      <button class="btn btn-accent" onclick="showToast('Afspraak ingepland!')">Opslaan</button>
+    </div>
+  </div>
+
+  <!-- UPLOAD MODAL -->
+  <div id="uploadModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('uploadModal')">&times;</span>
+      <h3>Nieuwe factuur uploaden</h3>
+      <label>Omschrijving:</label>
+      <input type="text" placeholder="Bijv. Remblokken vervangen" />
+      <label>Bedrag (€):</label>
+      <input type="number" />
+      <label>Upload bestand:</label>
+      <input type="file" id="uploadFile" accept="image/*,.pdf" multiple onchange="previewFiles(event, 'uploadPreview')" />
+      <div class="preview" id="uploadPreview"></div>
+      <button class="btn btn-accent" onclick="showToast('Factuur geüpload!')">Opslaan</button>
+    </div>
+  </div>
+
+  <div class="toast" id="toast"></div>
 
   <script>
     function openDetails() {
@@ -324,6 +386,17 @@
         document.getElementById('aanstaandTable').style.display = tab === 'aanstaand' ? '' : 'none';
       });
     });
-  </script>
-</body>
-</html>
+
+    function openModal(id) {
+      document.getElementById(id).style.display = 'flex';
+    }
+
+    function closeModal(id) {
+      document.getElementById(id).style.display = 'none';
+    }
+
+    function showToast(msg) {
+      const toast = document.getElementById('toast');
+      toast.textContent = '✅ ' + msg;
+      toast.style.display = 'block';
+      setTimeout(() => toast.style.display = 'none
